[gd_scene load_steps=13 format=3 uid="uid://on0g30s2p8ld"]

[ext_resource type="Script" path="res://scripts/grid_lever.gd" id="1_rn0hj"]
[ext_resource type="Texture2D" uid="uid://deihad86xcq3" path="res://assets/lever_off.png" id="2_bwuoy"]
[ext_resource type="FontFile" uid="uid://rnmua5wxwaqg" path="res://assets/Kubeon-Mono Bold.otf" id="3_5va48"]
[ext_resource type="AudioStream" uid="uid://cl6wfgqjbf7c7" path="res://assets/sfx/click.4.ogg" id="4_abnmy"]

[sub_resource type="Animation" id="Animation_smi3a"]
resource_name = "blink"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_syxwp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jvtld"]
_data = {
"RESET": SubResource("Animation_syxwp"),
"blink": SubResource("Animation_smi3a")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7r26"]
size = Vector2(60, 105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxjvg"]
size = Vector2(79, 152)

[sub_resource type="LabelSettings" id="LabelSettings_xqdp0"]
font = ExtResource("3_5va48")
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_fnvdb"]
font = ExtResource("3_5va48")
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_guckp"]
font = ExtResource("3_5va48")
font_size = 10

[node name="GridLever" type="StaticBody2D"]
process_mode = 1
script = ExtResource("1_rn0hj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jvtld")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.055, 3.701)
scale = Vector2(0.218254, 0.218254)
texture = ExtResource("2_bwuoy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_j7r26")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 23)
shape = SubResource("RectangleShape2D_hxjvg")

[node name="PowerReqTimer" type="Timer" parent="."]
one_shot = true

[node name="ToleranceTimer" type="Timer" parent="."]
one_shot = true

[node name="PowerReqLabel" type="Label" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -75.0
offset_right = 14.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "0"
label_settings = SubResource("LabelSettings_xqdp0")
horizontal_alignment = 1

[node name="PowerReqBar" type="ProgressBar" parent="PowerReqLabel"]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = -25.0
offset_top = -25.0
offset_right = 54.0
offset_bottom = 2.0
theme_override_fonts/font = ExtResource("3_5va48")
theme_override_font_sizes/font_size = 12
max_value = 1.0

[node name="CurrPowLabel" type="Label" parent="."]
offset_left = -67.0
offset_top = 57.0
offset_right = -27.0
offset_bottom = 84.0
text = "0"
label_settings = SubResource("LabelSettings_fnvdb")
horizontal_alignment = 1

[node name="CurrPowBar" type="ProgressBar" parent="CurrPowLabel"]
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 9.0
offset_top = -114.0
offset_right = 30.0
offset_bottom = -1.0
allow_greater = true
fill_mode = 3
show_percentage = false

[node name="InteractLabel" type="Label" parent="."]
visible = false
offset_left = -83.0
offset_top = -42.0
offset_right = 84.0
offset_bottom = -19.0
text = "Press 'E' to interact"
label_settings = SubResource("LabelSettings_guckp")

[node name="ToleranceBar" type="ProgressBar" parent="."]
visible = false
modulate = Color(1, 0, 0, 1)
offset_left = 40.0
offset_top = -57.0
offset_right = 61.0
offset_bottom = 56.0
max_value = 1.0
value = 1.0
fill_mode = 3
show_percentage = false

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_abnmy")

[connection signal="timeout" from="PowerReqTimer" to="." method="_on_power_req_timer_timeout"]
[connection signal="timeout" from="ToleranceTimer" to="." method="_on_tolerance_timer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
